⚡️ Added vehicles module GET
