# swagger.yaml
@@ -171,3 +171,67 @@ paths:
                     type: string
         "404":
           description: Product not found
+
+  /vehicles:
+    post:
+      summary: Create a new product
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                price:
+                  type: number
+                upc12:
+                  type: number
+                brandId:
+                  type: number
+      responses:
+        "201":
+          description: Created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+                  price:
+                    type: number
+                  upc12:
+                    type: number
+                  brandId:
+                    type: number
+
+    get:
+      summary: Get all vehicles
+      responses:
+        "200":
+          description: A list of vehicles
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    dvid:
+                      type: string
+                    lockStatus:
+                      type: string
+                    currentSpeedInKm:
+                      type: number
+                    batteryLevel:
+                      type: number
+                    status:
+                      type: string
+                    location:
+                      type: string
